[package]
name = "aux-config"
version = "0.1.0"
edition = "2018"

license = "MIT OR Apache-2.0"
description = "config file reader"
repository = "https://github.com/auuo/aux-svc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
lazy_static = "1.4.0"