[package]
name = "aux-i18n"
version = "0.1.0"
edition = "2018"

license = "MIT OR Apache-2.0"
description = "i18n message reader"
repository = "https://github.com/auuo/aux-svc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
anyhow = "1.0"
fluent = "0.16.0"
fluent-bundle = "0.15.2"
intl-memoizer = "0.5.1"