[package]
name = "aux-logid"
version = "0.1.0"
edition = "2018"

license = "MIT OR Apache-2.0"
description = "gen log id"
repository = "https://github.com/auuo/aux-svc/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
lazy_static = "1.4.0"
rand = "0.8"